Add discovery config to the configuration server and configuration server config to Eureka.
Note that we are playing chicken-egg game here, as we cannot register in Eureka if we are not able to get its configuration properties, that are stored in the configuration server.
We are also adding the prefer ip address configuration to avoid problems when running on not real / unproperly configured networks.

--- a/discovery-service/src/main/resources/bootstrap.yml
+++ b/discovery-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,12 @@
 spring:
   application:
     name: discovery-service
-    
+  cloud:
+    config:
+      discovery:
+        service-id: config-server
+        enabled: true
+        
 # This config will be loaded from the config service
 # eureka:
 #   client:
