--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8888
+eureka:
+# No need as we are using default config
+# client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
+  instance:
+    prefer-ip-address: true
